[package]
name = "ruvolt"
description = "An API wrapper for Revolt written in Rust."
version = "0.3.0"
authors = ["Arthur Damasceno <damascenoarthur653@gmail.com>"]
repository = "https://github.com/Arthur-Damasceno/ruvolt"
license = "MIT"
edition = "2021"

[dependencies]
tokio = { version = "1.15", features = ["time", "rt-multi-thread", "sync"] }
tokio-tungstenite = { version = "0.16", features = ["rustls-tls-webpki-roots"] }
async-trait = "0.1"
futures-util = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dependencies.reqwest]
version = "0.11"
default-features = false
features = ["rustls-tls", "json"]

[dev-dependencies]
tokio = { version = "1.15", features = ["macros"] }
