[package]
name = "ruvolt"
description = "An API wrapper for Revolt written in Rust."
version = "0.4.0"
authors = ["Arthur Damasceno <damascenoarthur653@gmail.com>"]
repository = "https://github.com/Arthur-Damasceno/ruvolt"
license = "MIT"
edition = "2021"

[dependencies]
# Async
tokio = { version = "1.17", features = ["time", "rt-multi-thread", "sync"] }
futures-util = "0.3"

# WebSocket
tokio-tungstenite = { version = "0.17", features = ["rustls-tls-webpki-roots"] }

# Serde
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Miscellaneous
async-trait = "0.1"
thiserror = "1"
bitflags = "1.3"
tracing = "0.1"

# Http
[dependencies.reqwest]
version = "0.11"
default-features = false
features = ["rustls-tls", "json"]

[dev-dependencies]
tokio = { version = "1.17", features = ["macros"] }
